--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,9 @@ export(googleCite)
 export(makeAuthorCloud)
 export(makePaperCloud)
 export(searchCite)
+import(RColorBrewer)
+import(XML)
 import(plyr)
+import(stringr)
+import(tm)
+import(wordcloud)
