Fixed Description file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: John Muschelli <jmuschel@jhsph.edu>
 Description: More about what it does (maybe more than one line)
 License: GPL
 LazyData: true
-imports: RColorBrewer,
+Imports:
+    RColorBrewer,
     XML,
     wordcloud,
     tm,
