--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: googleCite
 Type: Package
-Title: Scrapes Google Citation pages and creates word clouds
-Version: 1.1
-Date: 2014-12-15
+Title: Google Citation
+Version: 1.2
+Date: 2016-03-10
 Author: John Muschelli
-Maintainer: John Muschelli <jmuschel@jhsph.edu>
-Description: More about what it does (maybe more than one line)
+Maintainer: John Muschelli <muschellij2@gmail.com>
+Description: Scrapes Google citation pages and creates word clouds.
 License: GPL
 LazyData: true
 LazyLoad: yes
